# mpo_experiments

./: .gitignore  README.md  execution_tests.py  main copy.py  main.py  main_mpo.py  main_trl_mpo.py  mpo_continuous.py  mpo_nets_continuous.py  pyproject.toml  requirements.txt
mpo_baseline/: main.py  mpo.py  pyproject.toml  train_args.py  utils.py
mpo_baseline/algorithm/mpo/: MPO_Learner.py  __init__.py  maximization_step.py
mpo_baseline/buffer/: replay_buffer_retrace.py  replaybuffer.py  replaybuffer_gpu.py
mpo_baseline/checkpoints/: Ant-v5__mpo__1__1771339743_ac_steps1000000_gu491478.pt  Final_run_target_goal_for_poster.pt  MPO_ERFI_Target_goals_3000000_Final.pt  MPO_Inverted_wo_task_hint_without_ERFI.pt
mpo_baseline/environment/: ERFI_Wrappers.py  env_creator.py  ground_physics_wrapper.py  multi_task_wrapper.py  task_wrapper.py  wrapper_ferdinand.py
mpo_baseline/example/: main_mpo.py
mpo_baseline/example/configs/: Ant_v5.py
mpo_baseline/helpers/: ERFI_Wrappers.py  Gaussian_KL_div.py  env_creator.py  logging.py  multi_task_wrapper.py  sample_minibatch.py  save_model.py  store_trajectory.py  task_wrapper.py  utils.py  warm_up_compilation.py
mpo_baseline/mpo/: __init__.py  critic_forward_pass.py  critic_update.py  expectation_step.py  maximization_step.py  mpo.py  sample_actions.py
mpo_baseline/nets/: MLP_actor.py  MLP_critic.py  actor.py  critic.py
mpo_baseline/rollout/: rollout.py  rollout_vector_env.py  video_rollout.py
mpo_baseline/runners/: rollout.py
mpo_baseline/train_mpo/: evaluation.py  train_loop.py
mpo_baseline/writer/: init_writer.py
(+98 files in other folders)
