[project]
name = "mpo-rl"
version = "0.1.0"
description = "MPO experiments with MuJoCo Ant"
requires-python = ">=3.10,<3.11"

# Deine echten Dependencies basierend auf deinen Imports:
dependencies = [
    "numpy",
    "torch",
    "gymnasium[mujoco]",
    "mujoco",
    "scipy",
    "tqdm",
    "tyro",
    "wandb",
    "tensorboard",
    "moviepy",
    "imageio",
    "imageio-ffmpeg"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
